@@ -39,6 +39,7 @@ val verbose : bool ref
 val noprompt : bool ref
 val nopromptcont : bool ref
 val init_file : string option ref
+val noinit : bool ref
 val use_prims : string ref
 val use_runtime : string ref
 val principal : bool ref
